/*
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements. See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership. The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License. You may obtain a copy of the License at
 *
 *   http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing,
 * software distributed under the License is distributed on an
 * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
 * KIND, either express or implied. See the License for the
 * specific language governing permissions and limitations
 * under the License.
 *
 */

syntax = "proto3";

option java_multiple_files = true;
package org.apache.custos.resource.secret.service;


enum ResourceOwnerType {
    TENANT_USER = 0;
    CUSTOS = 1;
    TENANT = 2;
}

enum ResourceType {
    SERVER_CERTIFICATE = 0;
    JWT_SIGNING_CERTIFICATE = 1;
    VAULT_CREDENTIAL = 2;
}

enum ResourceSource {
    KUBE = 0;
    LOCAL = 1;
    EXTERNAL = 2;
    LETSENCRYPT = 3;
}

enum ResourceSecretType {
    SSH = 0;
    PASSWORD = 1;
    X509_CERTIFICATE = 2;
}

message SecretMetadata {
    ResourceOwnerType owner_type = 1;
    ResourceType resource_type = 2;
    ResourceSource source = 3;
    string name = 4;
    string value = 5;
    ResourceSecretType type = 6;
    int64 tenantId = 7;
    string owner_id = 8;
    int64 persisted_time = 9;
    string token = 10;
    string description = 11;
    string client_id = 12;

}


message GetSecretRequest {
    SecretMetadata metadata = 1;
    int64 tenantId = 2;
    string clientId = 3;
    string clientSec = 4;
    string accessToken = 5;
}


message CertificateCredential {
    SecretMetadata metadata = 1;
    string x509_cert = 3;
    string not_after = 4;
    string private_key = 5;
    int64 life_time = 6;
    string not_before = 7;
    bool useShamirsSecretSharingWithEncryption = 8;
    int32 numOfShares = 9;
    int32 threshold = 10;
    repeated bytes  private_key_shares = 11;
}

message PasswordCredential {
    SecretMetadata metadata = 1;
    string password = 3;
    bool useShamirsSecretSharingWithEncryption = 4;
    int32 numOfShares = 5;
    int32 threshold = 6;
    repeated bytes  secret_shares = 7;
}

message SSHCredential {
    SecretMetadata metadata = 1;
    string passphrase = 3;
    string public_key = 4;
    string private_key = 5;
    bool useShamirsSecretSharingWithEncryption = 6;
    int32 numOfShares = 7;
    int32 threshold = 8;
    repeated bytes  private_key_shares = 9;
}


message GetResourceCredentialByTokenRequest {
    int64 tenantId = 1;
    string token = 2;
    string performed_by = 3;
    string client_id = 4;
    bool useShamirsSecretSharingWithEncryption = 5;
    int32 numOfShares = 6;
    int32 threshold = 7;

}

message GetResourceCredentialSummariesRequest {
    ResourceType type = 1;
    repeated string accessible_tokens = 2;
    int64 tenantId = 3;
    string owner_id = 4;
    bool all_types = 5;
    string client_id =6;
}

message ResourceCredentialSummaries {
    repeated SecretMetadata metadata = 1;
}

message AddResourceCredentialResponse {
    string token = 1;
}

message ResourceCredentialOperationStatus {
    bool status = 1;
}


service ResourceSecretService {
    rpc getSecret (GetSecretRequest) returns (SecretMetadata);

    rpc getResourceCredentialSummary (GetResourceCredentialByTokenRequest) returns (SecretMetadata);
    rpc getAllResourceCredentialSummaries (GetResourceCredentialSummariesRequest) returns (ResourceCredentialSummaries);
    rpc addSSHCredential (SSHCredential) returns (AddResourceCredentialResponse);
    rpc addPasswordCredential (PasswordCredential) returns (AddResourceCredentialResponse);
    rpc addCertificateCredential (CertificateCredential) returns (AddResourceCredentialResponse);

    rpc getSSHCredential (GetResourceCredentialByTokenRequest) returns (SSHCredential);
    rpc getPasswordCredential (GetResourceCredentialByTokenRequest) returns (PasswordCredential);
    rpc getCertificateCredential (GetResourceCredentialByTokenRequest) returns (CertificateCredential);

    rpc deleteSSHCredential (GetResourceCredentialByTokenRequest) returns (ResourceCredentialOperationStatus);
    rpc deletePWDCredential (GetResourceCredentialByTokenRequest) returns (ResourceCredentialOperationStatus);
    rpc deleteCertificateCredential (GetResourceCredentialByTokenRequest) returns (ResourceCredentialOperationStatus);
}